[project]
name = "yandex-handbook-algorithms"
version = "0.1.0"
description = "Solutions for yandex education handbook \\\"Основы алгоритмов\\\""
authors = [
    {name = "mikhailkhorokhorin"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
